flexc++ (2.06.04)

  * Replaced (erroneously used) .hh extensions by (intended) .ih extensions in
    the man-pages and manual. 

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 09 Mar 2018 22:13:56 +0100

flexc++ (2.06.03)

  * Added C++-17 attributes like [[fallthrough]] and [[maybe_notused]] to
    flexc++'s and its generated code.

  * Improved the layout and fixed an error in some generated debug-statements

  * By implication: g++ >= 7.00.00 is required to compile the generated code.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 08 Mar 2018 12:44:31 +0100

flexc++ (2.06.02)

  * Flexc++'s parser code was generated by bisonc++ V 6.00.00.

  * The build script now properly recognizes the 'strip' option

  * By default precompiled headers are used. The option -P (cf. log entry 
    'flexc++ (2.05.00)' below) is now opertational. 
    Be advised that using -P removes all existing .ih.gch files from the
    directory containing 'main.ih' and from all its immediate subdirectories.

  * Removed the --std=c++14 compiler option since that's the standard by now.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 18 May 2017 11:19:09 +0200

flexc++ (2.06.01)

  * Somehow the timestamps of scanner/lexer and scanner/lex.cc were incorrect,
    resulting in the build process attempting to rebuild lex.cc using flexc++
    (which at this point clearly doesn't exist).  The timestamps were fixed in
    this release.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 04 Mar 2017 09:17:18 +0100
  
flexc++ (2.06.00)

  * Added directive %startcondition-name specifying a non-default name for the
    StartCondition__ enum.

  * Updated the man-pages/manual.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 27 Feb 2017 12:33:58 +0100

flexc++ (2.05.00)

  * Precompiled headers are rebuilt when their .h or .ih file have changed.

  * Added option --own-parser (-P) showing the actions of flexc++'s own parser
    when parsing a lexer-specification file.
