@@ -1,2 +1,2 @@
-#define VERSION "2.06.04"
+#define VERSION "2.06.05"
 #define YEARS   "2008-2018"
